synapse/synapse-deployement.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: matrix
spec:
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
        - name: synapse
          image: silviof/docker-matrix
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
          lifecycle:
            postStart:
              exec:
                command: ["gcsfuse", "-o", "nonempty", "matrix-data", "/data"]
            preStop:
              exec:
                command: ["fusermount", "-u", "/data"]
          ports:
            - containerPort: 8008
              name: http
            - containerPort: 8448
              name: federation
          volumeMounts:
            - name: synapse-config
              mountPath: /config
      volumes:
        - name: synapse-config
          hostPath:
            path: /hosthome/daurnimator/kubernetes-experiments/synapse-config
