synapse/synapse-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: matrix
spec:
  serviceName: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
        - name: synapse
          image: avhost/docker-matrix
          command: ["sh"]
          args: ["/scripts/run.sh"]
          ports:
            - containerPort: 8008
              name: http
            - containerPort: 8448
              name: federation
          volumeMounts:
            - name: synapse-data
              mountPath: /data
            - name: synapse-run
              mountPath: /scripts
            - name: nfs-data
              mountPath: /data/homeserver.yaml
              subPath: homeserver.yaml
            - name: nfs-data
              mountPath: /nfs
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 1Gi
      volumes:
        - name: synapse-run
          configMap:
            name: synapse-run
        - name: synapse-data
          gcePersistentDisk:
            pdName: matrix-data-pd
            fsType: ext4
        - name: nfs-data
          nfs:
            server: 10.31.246.107
            path: "/"
