synapse/synapse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-ss
spec:
  selector:
    app: synapse
  clusterIP: None
apiVersion: v1
---
apiVersion: v1
kind: Service
metadata:
  name: matrix
spec:
  selector:
    app: synapse
  ports:
  - name: http
    targetPort: 8008
    port: 80
  - name: federation
    port: 8448
