synapse/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: matrix-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - matrix.isra17.xyz
    secretName: tls-secret
  rules:
  - host: matrix.isra17.xyz
    http:
      paths:
      - backend:
          serviceName: matrix
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: proxy-matrix-federation
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: proxy-matrix-federation
    spec:
      containers:
      - name: proxy-tcp
        image: k8s.gcr.io/proxy-to-service:v2
        args: [ "tcp", "8448", "matrix" ]
        ports:
        - name: tcp
          protocol: TCP
          containerPort: 8448
          hostPort: 8448
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
